--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,11 @@ pnpm-debug.log*
 lerna-debug.log*
 
 
-
+/dist
 # Editor directories and files
 /node_modules
+/todo-list
+
 .vscode/*
 !.vscode/extensions.json
 .idea
